feat: added chats

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 OPENAI_API_KEY=""
 PORT=8000
 DEBUG=true
-DATABASE_URL=""
+DATABASE_URL=postgresql+psycopg2://myuser:mypassword@127.0.0.1:5432/mydatabase
 RELOAD=true
